# 250810_WS2812LEDs

./: .gitignore  README.md
HARDWARE/KEY/: key.c
HARDWARE/TIMER/: timer.c  timer.h
HARDWARE/WS2812/: ws2812.c  ws2812.h
USER/: CMakeLists.txt  PWM.uvguix.Harry  PWM.uvguix.lzy  PWM.uvoptx  PWM.uvprojx  main.c
